# book-recommender

./: .gitignore  data_exploration.ipynb  pyproject.toml  requirements.txt  sentiment_analysis.ipynb  text_classification.ipynb  vector_search.ipynb
db_books/36017a90-cf59-4ac5-bd36-053e4d705b7c/: index_metadata.pickle
